# cleanup

./: .gitignore  README.md  cleanup.py  config.yaml  main.py  pyproject.toml  requirements.txt  scanner.py
anime_cleanup/: models.py  scanner.py  shoko.py
anime_cleanup/api/: files.py
shokotoolkit/: __main__.py  constants.py  exceptions.py  logging.py  main.py
shokotoolkit/api/: __init__.py  auth.py  base.py  client.py  endpoints.py  exceptions.py  init.py  parser.py  response.py  series.py
